test/good/functions/var06.px

func f(Int x) def
    print x

func f'(Int x: 0) def
    print x

g = f'
a = [f']
a = [f, g]
a[0](5)
a[1](9)
