test/bad/functions/call04.px

func f(x: Int): Int def
    return 0

f()
